--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.SearchAssist" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-    </style>
 
-    <style name="Theme.SearchAssist" parent="Theme.MaterialComponents.DayNight.NoActionBar" />
+    <style name="Theme.SearchAssist" parent="Theme.MaterialComponents.DayNight.NoActionBar" ></style>
 </resources>
