--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
+    <style name="Base.Theme.SearchAssist" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    </style>
 
-    <style name="Theme.SearchAssist" parent="Theme.MaterialComponents.DayNight.NoActionBar" />
+    <style name="Theme.SearchAssist" parent="Base.Theme.SearchAssist" />
+    
     <style name="Theme.YourAppName" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">@color/cardview_dark_background</item>
+        <item name="windowSplashScreenBackground">@android:color/black</item>
         <item name="windowSplashScreenAnimatedIcon">@mipmap/sa</item>
-        <item name="postSplashScreenTheme">@style/Theme.YourAppName</item>
+        <item name="postSplashScreenTheme">@style/Theme.SearchAssist</item>
     </style>
 </resources>
