--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,15 +1,30 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.SearchAssist" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <!-- Dark Minimalist Base Theme -->
+    <style name="Base.Theme.SearchAssist" parent="android:Theme.Material.NoActionBar">
+        <!-- Dark theme colors -->
+        <item name="android:windowBackground">@color/background_primary</item>
+        <item name="android:colorBackground">@color/background_primary</item>
+        <item name="android:textColorPrimary">@color/text_primary</item>
+        <item name="android:textColorSecondary">@color/text_secondary</item>
+        <item name="android:colorPrimary">@color/accent_primary</item>
+        <item name="android:colorAccent">@color/accent_primary</item>
+        
+        <!-- Status bar and navigation bar -->
+        <item name="android:statusBarColor">@color/background_primary</item>
+        <item name="android:navigationBarColor">@color/background_primary</item>
+        <item name="android:windowLightStatusBar">false</item>
+        
+        <!-- Modern typography -->
+        <item name="android:fontFamily">sans-serif</item>
+        
+        <!-- Subtle animations -->
+        <item name="android:windowAnimationStyle">@android:style/Animation.Activity</item>
+        
+        <!-- Divider styling -->
+        <item name="android:listDivider">@color/border_dark</item>
     </style>
 
     <style name="Theme.SearchAssist" parent="Base.Theme.SearchAssist" />
     
-    <style name="Theme.YourAppName" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">@android:color/black</item>
-        <item name="windowSplashScreenAnimatedIcon">@mipmap/sa</item>
-        <item name="postSplashScreenTheme">@style/Theme.SearchAssist</item>
-    </style>
+
 </resources>
