Disable Jetpack Compose and remove related configurations
The Compose compiler plugin and related settings have been commented out in `app/build.gradle.kts` and `build.gradle.kts`. The `compose` build feature is now set to `false`.

The `compose-compiler` plugin alias has also been commented out in `gradle/libs.versions.toml`.

Additionally, a new `.idea/AndroidProjectSystem.xml` file has been added to specify Gradle as the project system.

--- a/app/src/main/res/xml/accessibility_service_config.xml
+++ b/app/src/main/res/xml/accessibility_service_config.xml
@@ -7,7 +7,8 @@
     android:notificationTimeout="10"
     android:canRetrieveWindowContent="true"
     android:canPerformGestures="true"
-    android:canRequestEnhancedWebAccessibility="true">
+    android:canRequestEnhancedWebAccessibility="true"
+    android:isAccessibilityTool="true">
 
     <meta-data
         android:name="android.accessibilityservice"
